<resources>
    <string name="app_name">Auction Application</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auctionit1">AuctionIT</string>
    <string name="auctionit2">AuctionIT</string>
    <string name="home1">Home</string>
    <string name="search1">Search</string>
    <string name="auctions1">Auctions</string>
    <string name="account1">Account</string>
    <string name="sign_in1">Sign in</string>
    <string name="home2">Home</string>
    <string name="search2">Search</string>
    <string name="auctions2">Auctions</string>
    <string name="account2">Account</string>
    <string name="title">Title</string>
    <string name="set_date">Set Date</string>
    <string name="done">Done</string>
    <string name="date">Date</string>
    <string name="img_url">Img URL</string>
    <string name="img_url2">Img Url</string>
    <string name="estimated_value">Estimated Value</string>
    <string name="starting_bid">Starting Bid</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView2</string>
    <string name="textview3">TextView3</string>
    <string name="textview4">TextView4</string>
    <string name="auctionit3">AuctionIT</string>
    <string name="cancel">Cancel</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="remember_me">Remember Me</string>
    <string name="auctionit4">AuctionIT</string>
    <string name="home3">Home</string>
    <string name="search3">Search</string>
    <string name="auctions3">Auctions</string>
    <string name="account3">Account</string>
    <string name="hello">Hello,</string>
    <string name="auctionit5">AuctionIT</string>
    <string name="home4">Home</string>
    <string name="search4">Search</string>
    <string name="auctions4">Auctions</string>
    <string name="account4">Account</string>
    <string name="auctionit">AuctionIT</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="auctions">Auctions</string>
    <string name="account">Account</string>
    <string name="estimated_value2">Estimated Value2:</string>
    <string name="art_name">Art Name</string>
    <string name="textview">TextView</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password1">Password</string>
    <string name="email_address1">Email Address</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="logout">logOut</string>
    <string name="confirm">confirm</string>
    <string name="email">Email</string>
    <string name="confirmpassword">confirmPassword</string>
    <string name="inputpassword">inputPassword</string>
    <string name="reset">reset</string>
    <string name="deleteme">deleteMe</string>
    <string name="chat">Chat</string>
    <string name="communicate">Communicate</string>
    <string name="logout1">logout</string>
    <string name="save_prefs">Save Prefs</string>
    <string name="getprefs">getPrefs</string>
    <string name="my_profile">My Profile</string>
    <string name="email2">email2</string>
    <string name="firstname1">firstName1</string>
    <string name="lastname1">lastName1</string>
    <string name="room">ROOM</string>
    <string name="to_txt">To Txt</string>
    <string name="to_csv">To CSV</string>
    <string name="get_all">Get All</string>
    <string name="filter_by_type_and_price">Filter By Type and Price</string>
    <string name="estimated_value1">Estimated Value</string>
    <string name="starting_bid1">Starting Bid</string>
    <string name="load_photo">Load Photo</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>


</resources>
