<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/titleTxtView"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_weight="0"
            android:fontFamily="@font/aldrich"
            android:gravity="center"
            android:text="@string/auctionit"
            android:textSize="24sp"
            android:textStyle="bold"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginBottom="-1dp"
        android:gravity="center">


        <Button
            android:id="@+id/home"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="2dp"
            android:background="@drawable/roundedbutton"
            android:fontFamily="@font/alike_angular"
            android:text="@string/home"
            android:textColor="#DC7633"
            android:textAllCaps="false"
            android:drawableTop="@drawable/ic_home_black_24dp"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/search"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_alignStart="@+id/home"
            android:layout_marginStart="103dp"
            android:background="@drawable/roundedbutton"
            android:fontFamily="@font/alike_angular"
            android:text="@string/search"
            android:textColor="#DC7633"
            android:drawableTop="@drawable/ic_search_black_24dp"
            android:textAllCaps="false"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/auctions"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_alignStart="@+id/search"
            android:layout_marginStart="104dp"
            android:background="@drawable/roundedbutton"
            android:fontFamily="@font/alike_angular"
            android:text="@string/auctions"
            android:textColor="#DC7633"
            android:textAllCaps="false"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/account"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_alignStart="@+id/auctions"
            android:layout_marginStart="105dp"
            android:background="@drawable/roundedbutton"
            android:fontFamily="@font/alike_angular"
            android:text="@string/account"
            android:textColor="#DC7633"
            android:textAllCaps="false"
            android:textStyle="bold"
            />
    </RelativeLayout>

    <ListView
        android:id="@+id/listView1"
        android:layout_width="390dp"
        android:layout_height="480dp"
        android:layout_above="@+id/footer"
        android:layout_marginBottom="162dp" />

    <Button
        android:id="@+id/toTXT"
        android:layout_width="127dp"
        android:layout_height="36dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="261dp"
        android:layout_marginBottom="152dp"
        android:background="#F29720"
        android:text="@string/to_txt" />

    <Button
        android:id="@+id/getAll"
        android:layout_width="127dp"
        android:layout_height="36dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="390dp"
        android:layout_marginEnd="260dp"
        android:layout_marginBottom="104dp"
        android:background="#F29720"
        android:text="@string/get_all" />

    <Button
        android:id="@+id/toCSV"
        android:layout_width="127dp"
        android:layout_height="36dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="150dp"
        android:background="#F29720"
        android:text="@string/to_csv" />

    <Button
        android:id="@+id/getFiltered"
        android:layout_width="127dp"
        android:layout_height="36dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="390dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="102dp"
        android:background="#F29720"
        android:text="@string/filter_by_type_and_price" />


</RelativeLayout>