<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    >

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:background="@android:color/transparent"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/titleTxtView"
            android:layout_width="271dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_marginStart="135dp"
            android:layout_weight="0"
            android:fontFamily="@font/aldrich"
            android:gravity="center_vertical"
            android:text="@string/auctionit"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="132dp"
            android:layout_height="49dp"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif-light"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="#DC7633"
            android:textSize="18sp" />
    </RelativeLayout>



    <Button
        android:id="@+id/signIN"
        android:layout_width="183dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="222dp"
        android:background="#F29720"
        android:gravity="center"
        android:text="@string/sign_in" />

    <Button
        android:id="@+id/register"
        android:layout_width="183dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="7dp"
        android:background="#F29720"
        android:gravity="center"
        android:text="@string/register" />

    <Button
        android:id="@+id/forgotPassword"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="12dp"
        android:gravity="center"
        android:background="@android:color/transparent"
        android:textAllCaps="false"
        android:text="@string/forgot_password" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="269dp"
        android:text="@string/remember_me" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginStart="25dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="25dp"
            android:drawableStart="@drawable/ic_markunread_black_24dp"
            android:ems="1"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:layout_marginStart="25dp">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="130dp"
            android:layout_marginEnd="26dp"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>




</RelativeLayout>