<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    >

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:background="@android:color/transparent"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/titleTxtView"
            android:layout_width="271dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_marginStart="135dp"
            android:layout_weight="0"
            android:fontFamily="@font/aldrich"
            android:gravity="center_vertical"
            android:text="@string/auctionit"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="132dp"
            android:layout_height="49dp"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif-light"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="#DC7633"
            android:textSize="18sp" />
    </RelativeLayout>


    <Button
        android:id="@+id/confirm"
        android:layout_width="341dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="439dp"
        android:layout_marginEnd="45dp"
        android:background="#F29720"
        android:gravity="center"
        android:text="@string/confirm" />




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="text"
            android:maxLines="1"
           />
    </com.google.android.material.textfield.TextInputLayout>



</RelativeLayout>